# multi-agent-doc-research

./: .env.example  .gitignore  README.md  pyproject.toml  test.input
.github/: copilot-instructions.md
app/backend/: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
app/backend/ai_search/: document.json  initialize_ai_search.ipynb
app/backend/config/: config.py
app/backend/i18n/: locale_msg.py
app/backend/model/: models.py
app/backend/prompts/: general_answer_prompt.yaml  magentic_citation_agent_prompt.yaml  magentic_credibility_critic_prompt.yaml  magentic_final_answer_prompt.yaml  magentic_lead_researcher_prompt.yaml  magentic_manager_prompt.yaml  magentic_report_writer_prompt.yaml  research_manager_prompt.yaml  research_reviewer_prompt.yaml  research_writer_prompt.yaml
app/backend/services_afw/: __init__.py  ai_search_executor.py  doc_research_orchestrator_afw.py  graphrag_executor.py  grounding_executor.py  group_chatting_executor.py  magentic_executor.py  web_search_executor.py  youtube_executor.py
app/backend/services_sk/: ai_search_plugin.py  doc_research_orchestrator_sk.py  graphrag_mcp_plugin.py  group_chatting_plugin.py  magentic_plugin.py  (+2 more)
app/frontend/: Dockerfile  run_app.sh
app/frontend/src/: app.py
gbb/: description.md
graphrag/: README.md  pyproject.toml  query_helper.py  requirements.txt  run_server.sh  server.py  settings.yaml
graphrag/notebook/: global_search.ipynb  local_search.ipynb  view_ouput.ipynb
infra/: backend-env.json.example  deploy.sh  main.bicep  main.parameters.json.example  main_aca_identity_exist.bicep
(+8 files in other folders)
