[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag-mcp-server"
version = "0.1.0"
description = "GraphRAG MCP Server for knowledge graph operations"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.13.1",
    "graphrag==2.7.0",
    "pandas>=2.0.0",
    "numpy>=1.26.4,<2.0.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
graphrag-mcp-server = "graphrag_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["graphrag_mcp_server"]
